# ESP32-LUA-demos

./: .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/lwmem/: CMakeLists.txt
components/lwmem/config/: lwmem_opts.h  lwmem_sys_freertos.c
components/lwmem/include/: lwmem_opts.h
lua/: Dockerfile  draw_life.lua  life.lua  main.lua  test_life.lua  utils.lua
lua/app/: cell.lua  life.lua  main.lua
lua/test/: bust.lua  test_life.lua
main/: CMakeLists.txt  gui_app.c  gui_app.h  life_app.cpp  life_app.h  life_app.hpp  lua_app.c  lua_app.cpp  lua_app.h  lua_app.hpp  main.c  main.cpp  utils.c  utils.h
